--- a/Display/PackSpecification.xaml
+++ b/Display/PackSpecification.xaml
@@ -28,69 +28,51 @@
                     <Grid Margin="40,40,0,40" HorizontalAlignment="Left">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="140"/>
-                            <ColumnDefinition Width="400"/>
+                            <ColumnDefinition Width="340"/>
                             <ColumnDefinition Width="140"/>
+                            <ColumnDefinition Width="60"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="70"/>
-                            <RowDefinition Height="60"/>
+                            <RowDefinition Height="70"/>
                             <RowDefinition Height="50"/>
                             <RowDefinition Height="70"/>
                             <RowDefinition Height="50"/>
                             <RowDefinition Height="50"/>
                             <RowDefinition Height="50"/>
-                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="100"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="品　番" FontSize="40"/>
-                        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="TextProductName" Text="{Binding ProductName,FallbackValue=MH024000}" Width="520" Padding="5,5,5,5"
-                                    materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LengthProductName}" InputMethod.IsInputMethodEnabled="False" FontSize="40">
+                        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" x:Name="TextProductName" Text="{Binding ProductName, FallbackValue=MH024000}" Width="520" Padding="5,5,5,5"
+                                 materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LengthProductName}" InputMethod.IsInputMethodEnabled="False" FontSize="40">
                             <TextBox.Resources>
                                 <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding IsFocusProductName}" Value="True">
+                                        <DataTrigger Binding="{Binding FocusProductName}" Value="True">
                                             <Setter Property="FocusManager.FocusedElement" Value="{Binding ElementName=TextProductName}"/>
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
                             </TextBox.Resources>
                             <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="GotFocus">
-                                    <i:InvokeCommandAction Command="{Binding GotFocus}" CommandParameter="LotNumber"/>
-                                </i:EventTrigger>
                                 <i:EventTrigger EventName="LostFocus">
                                     <i:InvokeCommandAction Command="{Binding LostFocus}" CommandParameter="LotNumber"/>
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                             <i:Interaction.Behaviors>
-                                <local:TextBoxMode/>
+                                <local:TextBoxMode Mode="AlphabetHyphen"/>
                             </i:Interaction.Behaviors>
                         </TextBox>
-                        <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Type, FallbackValue=段ボール・ポリ箱}" FontSize="40"/>
-                        <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="赤箱 ワンタッチ" FontSize="60"/>
-                        <TextBlock Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" Text="600" HorizontalAlignment="Right" FontSize="60" Margin="0,0,20,0"/>
-                        <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Text="パレット：" FontSize="33"/>
-                        <TextBlock Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Palette}" FontSize="33"/>
-                        
-                        <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Comment}" FontSize="33"/>
-                        <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" Orientation="Horizontal" Visibility="{Binding VisibileButton, Converter={StaticResource CollapsedConverter}}">
-                            <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="1">
-                                <Viewbox Style="{StaticResource Button}">
-                                    <WrapPanel>
-                                        <materialDesign:PackIcon Kind="PackageVariant" Margin="0,3,20,0" Height="30" Width="30"/>
-                                        <TextBlock Text="段ボール"/>
-                                    </WrapPanel>
-                                </Viewbox>
-                                <i:Interaction.Behaviors>
-                                    <local:ButtonBehavior/>
-                                </i:Interaction.Behaviors>
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="TouchDown">
-                                        <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="1"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </Button>
-                            <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="2">
+                        <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding ContainerCategory, FallbackValue=段ボール・ポリ箱}" FontSize="40"/>
+                        <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Container, FallbackValue=青箱 大}" FontSize="60"/>
+                        <TextBlock Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Carton, FallbackValue=99}" HorizontalAlignment="Right" FontSize="60" Margin="0,0,20,0"/>
+                        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="個" FontSize="40" VerticalAlignment="Bottom" Margin="0,0,0,2"/>
+                        <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Text="パレット：" Visibility="{Binding Palette, Converter={StaticResource CollapsedValueConverter}}" FontSize="33"/>
+                        <TextBlock Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Palette, FallbackValue=折パレ}" FontSize="33"/>
+                        <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding ContainerComment}" FontSize="33"/>
+                        <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Left" Orientation="Horizontal" Visibility="{Binding VisibileButton, Converter={StaticResource CollapsedConverter}}">
+                            <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory1">
                                 <Viewbox Style="{StaticResource Button}">
                                     <WrapPanel>
                                         <materialDesign:PackIcon Kind="Package" Margin="0,3,20,0" Height="30" Width="30"/>
@@ -102,7 +84,39 @@
                                 </i:Interaction.Behaviors>
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="TouchDown">
-                                        <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="2"/>
+                                        <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory1"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
+                            <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory2">
+                                <Viewbox Style="{StaticResource Button}">
+                                    <WrapPanel>
+                                        <materialDesign:PackIcon Kind="Package" Margin="0,3,20,0" Height="30" Width="30"/>
+                                        <TextBlock Text="ポリ箱"/>
+                                    </WrapPanel>
+                                </Viewbox>
+                                <i:Interaction.Behaviors>
+                                    <local:ButtonBehavior/>
+                                </i:Interaction.Behaviors>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TouchDown">
+                                        <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory2"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Button>
+                            <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory3">
+                                <Viewbox Style="{StaticResource Button}">
+                                    <WrapPanel>
+                                        <materialDesign:PackIcon Kind="PackageVariant" Margin="0,3,20,0" Height="30" Width="30"/>
+                                        <TextBlock Text="段ボール"/>
+                                    </WrapPanel>
+                                </Viewbox>
+                                <i:Interaction.Behaviors>
+                                    <local:ButtonBehavior/>
+                                </i:Interaction.Behaviors>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TouchDown">
+                                        <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory3"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Button>
