--- a/Display/ManufactureInfo.xaml
+++ b/Display/ManufactureInfo.xaml
@@ -75,7 +75,7 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                             <i:Interaction.Behaviors>
-                                <local:TextBoxMode Mode="Hyphen"/>
+                                <local:TextBoxBehavior Mode="Hyphen"/>
                             </i:Interaction.Behaviors>
                         </TextBox>
                         <Viewbox Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">
@@ -98,7 +98,7 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                             <i:Interaction.Behaviors>
-                                <local:TextBoxMode/>
+                                <local:TextBoxBehavior/>
                             </i:Interaction.Behaviors>
                         </TextBox>
                         <Viewbox Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">
@@ -121,7 +121,7 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                             <i:Interaction.Behaviors>
-                                <local:TextBoxMode/>
+                                <local:TextBoxBehavior/>
                             </i:Interaction.Behaviors>
                         </TextBox>
                         <Viewbox Grid.Row="5" Grid.Column="0" Style="{StaticResource Label}">
@@ -148,7 +148,7 @@
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                                 <i:Interaction.Behaviors>
-                                    <local:TextBoxMode Mode="Number"/>
+                                    <local:TextBoxBehavior Mode="Number"/>
                                 </i:Interaction.Behaviors>
                             </TextBox>
                             <Viewbox Style="{StaticResource Label}" Margin="0,0,13,0">
@@ -177,7 +177,7 @@
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                                 <i:Interaction.Behaviors>
-                                    <local:TextBoxMode Mode="Number"/>
+                                    <local:TextBoxBehavior Mode="Number"/>
                                 </i:Interaction.Behaviors>
                             </TextBox>
                             <Viewbox Style="{StaticResource Label}">
@@ -206,7 +206,7 @@
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                                 <i:Interaction.Behaviors>
-                                    <local:TextBoxMode Mode="Number"/>
+                                    <local:TextBoxBehavior Mode="Number"/>
                                 </i:Interaction.Behaviors>
                             </TextBox>
                             <CheckBox x:Name="CheckCompleted" IsChecked="{Binding Completed, Converter={StaticResource CompletConverter}}" FontSize="20" 
